--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ plugins {
 
     // Apply the application plugin to add support for building a CLI application.
     id 'application'
+
+    id 'jacoco'
+
+    id 'org.openjfx.javafxplugin' version '0.0.8'
 }
 
 repositories {
@@ -24,8 +28,28 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:29.0-jre'
 
+    implementation 'com.google.code.gson:gson:2.8.6'
+
     // Use JUnit test framework
     testImplementation 'junit:junit:4.13'
+}
+
+javafx {
+    version = "11"
+    modules = [ 'javafx.controls', 'javafx.fxml']
+}
+
+jacoco {
+    toolVersion = "0.8.4"
+    reportsDir = file("$buildDir/coverage")
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled false
+        csv.enabled false
+        html.destination file("${buildDir}/jacocoHtml")
+    }
 }
 
 application {
