--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,8 @@ repositories {
 dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:29.0-jre'
-
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'mysql:mysql-connector-java:8.0.11'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.13'
